--- a/about.html
+++ b/about.html
@@ -144,9 +144,8 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12 d-flex align-items-center justify-content-center">
                     <div class="about-company-info ">
-                        <h1>We Are Increasing Business Success With Technology</h1>
-                        <p>Over 25 years working in IT services developing software applications and mobile apps for clients all over the world.
-                            We denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying.</p>
+                        <h1>About A Technologies – Innovating from the Heart of Salasar</h1>
+                        <p>At A Technologies, we’re more than just a software company — we’re your technology partner. Based in Salasar, we specialize in creating reliable, scalable, and custom software solutions that drive real results. Our team of skilled developers, designers, and strategists is committed to turning your vision into digital reality, with a focus on innovation, quality, and long-term success.</p>
                     </div>
 
                 </div>
@@ -172,7 +171,7 @@
         <div class="heading-passion text-center pb-5">
          
           <h1>Passion</h1>
-          <p> See what we do here with good passions</p>
+          <p> Driven by Passion, Powered by Purpose</p>
           
         </div>
          <div class="row gy-4 ">
@@ -181,8 +180,8 @@
                   <div class="top-icon">
                     <i class="fa-solid fa-arrow-right"></i>
                 </div>
-                  <h5>IT DESIGN</h5>
-                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum, aliquid!</p>
+                  <h5> Innovation at Core</h5>
+                  <p>We embrace new technologies to build smarter, future-ready solutions.</p>
                   <div class="bottom-icon">
                     <i class="fa-regular fa-gem"></i>
                 </div>
@@ -193,8 +192,10 @@
                 <div class="top-icon">
                   <i class="fa-solid fa-arrow-right"></i>
               </div>
-                <h5>IT MANAGEMENT</h5>
-                <p >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum, aliquid!</p>
+                <h5> Client-Centric Approach</h5>
+                <p>Your business goals are our top priority in every project we deliver.
+
+</p>
                 <div class="bottom-icon">
                   <i class="fa-solid fa-dice-d20"></i>
               </div>
@@ -205,8 +206,8 @@
                 <div class="top-icon">
                   <i class="fa-solid fa-arrow-right"></i>
               </div>
-                <h5>IT SECURITY</h5>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum, aliquid!</p>
+                <h5>Commitment to Quality</h5>
+                <p>We follow best practices to ensure high performance and reliability.</p>
                 <div class="bottom-icon">
                   <i class="fa-solid fa-shield-halved"></i>
               </div>
@@ -217,8 +218,10 @@
                 <div class="top-icon">
                   <i class="fa-solid fa-arrow-right"></i>
               </div>
-                <h5>DATA SECURITY</h5>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum, aliquid!</p>
+                <h5>Continuous Growth</h5>
+                <p>We evolve through learning, adapting, and striving for excellence.
+
+</p>
                 <div class="bottom-icon">
                   <i class="fa-solid fa-globe"></i>
               </div>
