--- a/services.html
+++ b/services.html
@@ -158,6 +158,7 @@
                     <div class="services-heading ">
                   <h5>Web Development</h5>
                     <p>All kind of industry</p>
+                    <div><p>We craft modern, responsive websites and web apps that drive engagement and growth.</p></div>
                     </div>
                     <a class="arrow-sign" href="">
                     <svg xmlns="http://www.w3.org/2000/svg" width="1.5rem" height="1.5rem" fill="#e3e3e3" class="bi bi-chevron-double-right" viewBox="0 0 16 16">
@@ -175,6 +176,7 @@
                     <div class="services-heading ">
                   <h5>CRM</h5>
                     <p>All kind of industry</p>
+                    <div><p>Strengthen your customer relationships with custom CRM systems tailored to your business needs. </p></div>
                     </div>
                     <a class="arrow-sign" href="">
                     <svg xmlns="http://www.w3.org/2000/svg" width="1.5rem" height="1.5rem" fill="#e3e3e3" class="bi bi-chevron-double-right" viewBox="0 0 16 16">
@@ -191,8 +193,9 @@
                    <svg fill="#0bcbe5"style ="height:2.4rem; width:2.4rem;" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 491.402 491.402" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M490.86,113.163l-0.8-6.7l-6.48-1.91c-85.26-25.11-117.45-57.86-117.73-58.155l-7.42-7.785l-7.44,7.75 c-0.244,0.252-19.177,19.418-66.048,39.646c-27.738-14.573-58.841-22.341-90.382-22.341C87.28,63.668,0,150.948,0,258.228 s87.28,194.56,194.56,194.56c88.252,0,164.666-58.795,187.629-143.468C504.841,244.012,491.022,114.528,490.86,113.163z M137.213,94.055c-11.909,13.92-22.154,32.032-30.089,53.439c-9.673-5.644-18.826-12.245-27.375-19.779 C96.407,113.043,115.847,101.542,137.213,94.055z M65.207,142.141c10.984,9.818,22.827,18.354,35.475,25.346 c-6.778,24.136-10.82,51.385-11.609,80.502H20.999C23.377,207.407,39.647,170.592,65.207,142.141z M20.999,268.468h68.074 c0.785,28.963,4.795,56.071,11.509,80.112c-12.696,7.029-24.582,15.611-35.599,25.488C39.55,345.652,23.37,308.932,20.999,268.468 z M79.501,388.517c8.578-7.587,17.764-14.235,27.477-19.916c7.954,21.569,18.256,39.801,30.235,53.801 C115.739,414.877,96.215,403.293,79.501,388.517z M184.32,430.855c-23.844-6.141-44.951-33.284-58.668-71.8 c18.422-7.946,38.209-12.554,58.668-13.738V430.855z M184.32,324.837c-22.561,1.167-44.444,5.972-64.832,14.496 c-5.711-21.492-9.182-45.562-9.945-70.864h74.777V324.837z M184.32,247.988h-74.777c0.768-25.457,4.27-49.677,10.042-71.269 c20.36,8.5,42.211,13.285,64.735,14.451V247.988z M184.32,170.69c-20.406-1.181-40.145-5.763-58.526-13.671 c13.72-38.311,34.761-65.297,58.526-71.417V170.69z M258.513,96.325c-1.232,0.436-2.499,0.869-3.758,1.302 c-0.999-1.264-1.982-2.577-3.001-3.773C254.019,94.642,256.281,95.445,258.513,96.325z M204.8,85.606 c11.486,2.964,21.261,10.417,28.958,18.78c-0.186,0.055-0.351,0.112-0.538,0.167l-6.48,1.91l-0.8,6.7 c-0.068,0.568-2.486,23.376,3.519,54.481c-8.111,1.649-16.348,2.737-24.659,3.22V85.606z M204.8,191.343 c9.936-0.518,19.784-1.793,29.472-3.801c5.611,19.231,14.688,40.203,29.129,60.446H204.8V191.343z M204.8,268.468h74.806 c-0.747,25.444-4.243,49.452-9.886,70.897c-20.41-8.546-42.322-13.359-64.919-14.528V268.468z M204.8,430.877v-85.56 c20.553,1.188,40.424,5.836,58.913,13.845C250.027,397.858,228.818,424.807,204.8,430.877z M251.094,422.918 c12.195-14.1,22.687-32.609,30.811-54.464c9.886,5.761,19.224,12.529,27.934,20.262 C292.796,403.76,272.899,415.472,251.094,422.918z M324.392,374.304c-11.146-10.031-23.181-18.745-36.053-25.851 c5.399-19.12,9.173-40.081,10.878-62.411c15.134,12.298,33.29,23.508,55.173,32.811l2.824,1.198 C349.542,340.346,338.374,358.661,324.392,374.304z M358.4,298.258c-110.28-49.215-113.76-149.275-112.6-176.105 c64.29-19.84,98.69-43.595,112.6-54.995c13.9,11.395,48.29,35.14,112.53,54.97C471.8,148.708,467.54,249.498,358.4,298.258z"></path> </g> </g> <g> <g> <path d="M432.22,141.408c-25.82-9.65-48.84-20.7-68.42-32.84l-5.4-3.345l-5.4,3.345c-19.55,12.125-42.57,23.17-68.4,32.825 l-7.77,2.905l1.23,8.21c4.92,32.65,21.96,78.015,75.22,108.725l5.12,2.95l5.11-2.95c53.3-30.72,70.34-76.075,75.26-108.71 l1.23-8.21L432.22,141.408z M358.4,240.413c-38.14-23.97-53.09-56.785-58.63-82.905c21.61-8.495,41.27-17.97,58.63-28.26 c17.38,10.3,37.05,19.785,58.66,28.275C411.52,183.633,396.57,216.433,358.4,240.413z"></path> </g> </g> </g></svg>
                   </div>
                     <div class="services-heading ">
-                  <h5>Cyber Security</h5>
+                  <h5>Video Editing</h5>
                     <p>All kind of industry</p>
+                    <div><p>Create videos that engage and convert. Our video editing team delivers polished, high-quality content for branding, advertising, </p></div>
                     </div>
                     <a class="arrow-sign" href="">
                     <svg xmlns="http://www.w3.org/2000/svg" width="1.5rem" height="1.5rem" fill="#e3e3e3" class="bi bi-chevron-double-right" viewBox="0 0 16 16">
@@ -221,6 +224,7 @@
                     <div class="services-heading ">
                   <h5>SEO</h5>
                     <p>All kind of industry</p>
+                    <div><p>Rank higher, reach more. Our SEO strategies help you increase organic traffic, visibility, and lead generation.</p></div>
                     </div>
                     <a class="arrow-sign" href="">
                     <svg xmlns="http://www.w3.org/2000/svg" width="1.5rem" height="1.5rem" fill="#e3e3e3" class="bi bi-chevron-double-right" viewBox="0 0 16 16">
@@ -236,8 +240,9 @@
                       <svg fill="#0bcbe5" height="2.6rem" width="2.6rem" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 502.664 502.664" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <g> <path d="M310.166,397.593H75.951V61.671h234.151v25.13h31.472V54.811C341.595,24.677,316.853,0,286.74,0H99.355 C69.199,0,44.522,24.677,44.522,54.811v393.02c0,30.178,24.677,54.833,54.833,54.833H286.74 c30.113,0,54.855-24.655,54.855-54.833V397.01h-31.429C310.166,397.01,310.166,397.593,310.166,397.593z M193.015,475.226 c-13.892,0-25.108-11.238-25.108-25.108c0-13.913,11.217-25.13,25.108-25.13c13.913,0,25.152,11.238,25.152,25.13 C218.167,463.988,206.929,475.226,193.015,475.226z"></path> <rect x="102.785" y="95.386" width="70.256" height="42.84"></rect> <rect x="102.785" y="205.073" width="70.256" height="42.84"></rect> <rect x="102.785" y="319.873" width="70.256" height="42.818"></rect> <path d="M422.399,223.905c-2.481-12.986-7.507-25.001-14.625-35.506l25.195-25.216l-25.734-25.648l-25.152,25.173 c-10.462-7.161-22.541-12.123-35.484-14.625v-35.7h-36.411v35.7c-12.964,2.502-24.936,7.485-35.505,14.625l-25.108-25.173 l-25.734,25.669l25.152,25.216c-7.097,10.505-12.101,22.52-14.582,35.484h-35.657v36.39h35.656 c2.481,12.921,7.507,24.936,14.603,35.484l-25.173,25.173l25.734,25.626l25.173-25.152c10.527,7.161,22.541,12.144,35.505,14.668 v35.635h36.411v-35.656c12.942-2.481,24.936-7.507,35.484-14.625l25.152,25.152l25.734-25.648l-25.195-25.173 c7.118-10.505,12.123-22.541,14.625-35.505h35.678l0,0v-36.368H422.399z M328.437,281.693c-21.894,0-39.669-17.688-39.669-39.604 c0-21.894,17.774-39.69,39.669-39.69c21.916,0,39.604,17.774,39.604,39.69C368.041,264.026,350.309,281.693,328.437,281.693z"></path> </g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> </g> </g></svg>
                   </div>
                     <div class="services-heading ">
-                  <h5>App Development</h5>
+                  <h5> Graphic Design</h5>
                     <p>All kind of industry</p>
+                    <div><p>From logos to social media creatives, our graphic design services bring your brand to life with visually stunning and impactful designs tailored for digital and print platforms.</p></div>
                     </div>
                     <a class="arrow-sign" href="">
                     <svg xmlns="http://www.w3.org/2000/svg" width="1.5rem" height="1.5rem" fill="#e3e3e3" class="bi bi-chevron-double-right" viewBox="0 0 16 16">
@@ -256,6 +261,7 @@
                     <div class="services-heading ">
                   <h5>Design & Analysit</h5>
                     <p>All kind of industry</p>
+                    <div><p>Turn data into design-driven decisions. We combine intuitive UI/UX design with performance analytics</p></div>
                     </div>
                     <a class="arrow-sign" href="">
                     <svg xmlns="http://www.w3.org/2000/svg" width="1.5rem" height="1.5rem" fill="#e3e3e3" class="bi bi-chevron-double-right" viewBox="0 0 16 16">
